# lightdm-remote-session-remoteconfigure

./: .bzrignore  AUTHOR-glue  AUTHORS  Makefile.am  README.md  configure.ac  firefox-remoteconfigure.desktop.in  firefox-remoteconfigure.sh  firefox-uccsconfigure.desktop  firefox-uccsconfigure.desktop.in  firefox-uccsconfigure.sh  lightdm-remote-session-remoteconfigure.default  lightdm-remote-session-remoteconfigure.in  lightdm-remote-session-uccsconfigure.in  remoteconfigure-session-wrapper.c  remoteconfigure-session.in  remoteconfigure.desktop.in  uccsconfigure-session-wrapper.c  uccsconfigure-session.in  uccsconfigure.desktop.in
debian/: changelog  control  copyright  lightdm-remote-session-remoteconfigure.default  watch
