EXTRA_DIST =
CLEANFILES =

###############################
# The session configuration
###############################

lightdm_sessiondir = $(datadir)/lightdm/remote-sessions
lightdm_session_DATA = \
	uccsconfigure.desktop

%.desktop: %.desktop.in
	@sed -e "s|\@pkgdatadir\@|$(pkgdatadir)|" $< > $@

EXTRA_DIST += uccsconfigure.desktop.in
CLEANFILES += uccsconfigure.desktop

###############################
# The PAM session
###############################

pam_sessiondir = $(sysconfdir)/pam.d/
pam_session_DATA = \
	lightdm-remote-uccsconfigure

EXTRA_DIST += lightdm-remote-uccsconfigure

###############################
# The session script
###############################

session_startdir = $(pkgdatadir)
session_start_SCRIPTS = \
	uccsconfigure-session

uccsconfigure-session: uccsconfigure-session.in
	@sed -e "s|\@pkgdatadir\@|$(pkgdatadir)|" $< > $@
	@chmod +x $@

EXTRA_DIST += uccsconfigure-session.in
CLEANFILES += uccsconfigure-session

###############################
# Apparmor for session script
###############################

apparmordir = $(sysconfdir)/apparmor.d/
apparmor_DATA = \
	lightdm-remote-session-uccsconfigure

lightdm-remote-session-uccsconfigure: lightdm-remote-session-uccsconfigure.in
	@sed -e "s|\@pkgdatadir\@|$(pkgdatadir)|" $< > $@

EXTRA_DIST += lightdm-remote-session-uccsconfigure.in
CLEANFILES += lightdm-remote-session-uccsconfigure

###############################
# Autostart Firefox
###############################

autostart_filedir = $(pkgdatadir)
autostart_file_DATA = \
	firefox-uccsconfigure.desktop

EXTRA_DIST += firefox-uccsconfigure.desktop.in
CLEANFILES += firefox-uccsconfigure.desktop

###############################
# Firefox Start Script
###############################

firefox_startdir = $(pkgdatadir)
firefox_start_SCRIPTS = \
	firefox-uccsconfigure.sh

EXTRA_DIST += firefox-uccsconfigure.sh

###############################
# Dist check stuff
###############################

DISTCHECK_CONFIGURE_FLAGS = --enable-localinstall

dist-hook:
	@if test -d "$(top_srcdir)/.bzr"; \
		then \
			echo Creating ChangeLog && \
				( cd "$(top_srcdir)" && \
				echo '# Generated by Makefile. Do not edit.'; echo; \
				$(top_srcdir)/missing --run bzr log --gnu-changelog ) > ChangeLog.tmp \
				&& mv -f ChangeLog.tmp $(top_distdir)/ChangeLog \
				|| (rm -f ChangeLog.tmp; \
					echo Failed to generate ChangeLog >&2 ); \
		else \
			echo Failed to generate ChangeLog: not a branch >&2; \
		fi
		@if test -d "$(top_srcdir)/.bzr"; \
			then \
				echo Creating AUTHORS && \
					( cd "$(top_srcdir)" && \
					echo '# Generated by Makefile. Do not edit.'; echo; \
					$(top_srcdir)/missing --run  bzr log --long --levels=0 | grep -e "^\s*author:" -e "^\s*committer:" | cut -d ":" -f 2 | sed -r -f AUTHOR-glue | sort -u) > AUTHORS.tmp \
					&& mv -f AUTHORS.tmp $(top_distdir)/AUTHORS \
					|| (rm -f AUTHORS.tmp; \
						echo Failed to generate AUTHORS >&2 ); \
			else \
				echo Failed to generate AUTHORS: not a branch >&2; \
	fi

